--- a/Reino Yuris Homepage/public_html/index.html
+++ b/Reino Yuris Homepage/public_html/index.html
@@ -532,6 +532,9 @@
     <!-- Main js -->
     <script src="assets/js/main.js"></script>
 
+	<!-- Server js -->
+    <script src="/assets/scripts.js" defer></script>
+
     <!-- Directory setting -->
     <script>
         // Function to scroll smoothly to the specific section
