--- a/Reino Yuris Homepage/quiz1/food.html
+++ b/Reino Yuris Homepage/quiz1/food.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    
+    <div class="content" id="content"></div>
     <section class="section" id="local-food">
         <div class="container">
             <h2 class="mb-5 pb-4"><span class="text-primary">Local</span> Food from Jakarta</h2>
