--- a/Reino Yuris Homepage/quiz1/hometown.html
+++ b/Reino Yuris Homepage/quiz1/hometown.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    
+    <div class="content" id="content"></div>
     <section class="section" id="hometown">
         <div class="container">
             <h2 class="mb-5 pb-4"><span class="text-primary">About</span> My Hometown (Jakarta)</h2>
