--- a/Reino Yuris Homepage/quiz1/profile.html
+++ b/Reino Yuris Homepage/quiz1/profile.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
+    <div class="content" id="content"></div>
     <!-- logo profile -->
     <div class="d-flex justify-content-center align-items-center" style="flex-direction: column; text-align: center; margin-top: 20px;">
         <ul class="navbar-nav brand" style="list-style: none; padding: 0;">
