--- a/Reino Yuris Homepage/quiz1/tourist.html
+++ b/Reino Yuris Homepage/quiz1/tourist.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
+    <div class="content" id="content"></div>
     <section class="section" id="tourist-places">
         <div class="container">
             <h2 class="mb-5">Tourist <span class="text-danger">Places in Jakarta</span></h2>
