--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -534,10 +534,10 @@
     <script>
     const routes = {
         '/quiz1': 'index.html',
-        '/quiz1/profile': 'profile.html',
-        '/quiz1/hometown': 'hometown.html',
-        '/quiz1/food': 'food.html',
-        '/quiz1/tourist': 'tourist.html',
+        '/quiz1/profile': '/quiz1/profile.html',
+        '/quiz1/hometown': '/quiz1/hometown.html',
+        '/quiz1/food': '/quiz1/food.html',
+        '/quiz1/tourist': '/quiz1/tourist.html',
     };
 
     async function router() {
