--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -43,18 +43,27 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/quiz1/profile" class="nav-link">Profile</a>
+                        <a href="../quiz1/profile" class="nav-link">Profile</a>
+                    </li>
+		</ul>
+		<ul class="navbar-nav brand">
+                    <img src="assets/imgs/logo_pic.jpeg" alt="" class="brand-img">
+                    <li class="brand-txt">
+                        <h5 class="brand-title">Reino Yuris</h5>
+                        <div class="brand-subtitle">Informatics Student</div>
+                    </li>
+                </ul>
+		<ul>
+                    <li class="nav-item">
+                        <a href="../quiz1/food" class="nav-link">Food</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/quiz1/food" class="nav-link">Food</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/quiz1/hometown" class="nav-link">Hometown</a>
+                        <a href="../quiz1/hometown" class="nav-link">Hometown</a>
                     </li>
                     <li class="nav-item last-item">
-                        <a href="/quiz1/tourist" class="nav-link">Tourist</a>
+                        <a href="../quiz1/tourist" class="nav-link">Tourist</a>
                     </li>
-                </ul>                
+                 </ul>                
             </div>
         </div>
     </nav>
