--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -53,7 +53,7 @@
                         <div class="brand-subtitle">Informatics Student</div>
                     </li>
                 </ul>
-		<ul>
+		<ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a href="../quiz1/food" class="nav-link">Food</a>
                     </li>
