--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
     <div class="container">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,10 +38,10 @@
         <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="#/quiz1" class="nav-link">Home</a>
+                    <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#/quiz1/profile" class="nav-link">Profile</a>
+                    <a href="#profile" class="nav-link">Profile</a>
                 </li>
             </ul>
             <ul class="navbar-nav brand">
@@ -53,13 +53,13 @@
             </ul>
             <ul class="navbar-nav ml-auto">         
                 <li class="nav-item">
-                    <a href="#/quiz1/hometown" class="nav-link">Hometown</a>
+                    <a href="#hometown" class="nav-link">Hometown</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#/quiz1/food" class="nav-link">Food</a>
+                    <a href="#food" class="nav-link">Food</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
+                    <a href="#tourist" class="nav-link">Tourist</a>
                 </li>
             </ul>
         </div>
