--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -37,10 +37,10 @@
             <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="#/quiz1" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#profile" class="nav-link">profilet</a>
+                        <a href="#/quiz1/profile" class="nav-link">Profile</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
@@ -50,12 +50,15 @@
                         <div class="brand-subtitle">Informatics Student</div>
                     </li>
                 </ul>
-                <ul class="navbar-nav ml-auto">         
+                <ul class="navbar-nav ml-auto">
+		    <li class="nav-item">
+                        <a href="#/quiz1/food" class="nav-link">Food</a>
+                    </li>
                     <li class="nav-item">
-                        <a href="#Tourist" class="nav-link">Tourist</a>
+                        <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
                     </li>
                     <li class="nav-item last-item">
-                        <a href="#Hometown" class="nav-link">Hometown</a>
+                        <a href="#/quiz1/hometown" class="nav-link">Hometown</a>
                     </li>
                 </ul>
             </div>
