--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -30,37 +30,39 @@
         </div>
     </header>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
-        <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="#/quiz1" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#/quiz1/profile" class="nav-link">Profile</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav brand">
-                    <img src="assets/imgs/logo_pic.jpeg" alt="" class="brand-img">
-                    <li class="brand-txt">
-                        <h5 class="brand-title">Reino Yuris</h5>
-                        <div class="brand-subtitle">Informatics Student</div>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-		    <li class="nav-item">
-                        <a href="#/quiz1/food" class="nav-link">Food</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
-                    </li>
-                    <li class="nav-item last-item">
-                        <a href="#/quiz1/hometown" class="nav-link">Hometown</a>
-                    </li>
-                </ul>
+        <div class="content" id="content">
+            <div class="container">
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a href="#/quiz1" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#/quiz1/profile" class="nav-link">Profile</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav brand">
+                        <img src="assets/imgs/logo_pic.jpeg" alt="" class="brand-img">
+                        <li class="brand-txt">
+                            <h5 class="brand-title">Reino Yuris</h5>
+                            <div class="brand-subtitle">Informatics Student</div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                            <a href="#/quiz1/food" class="nav-link">Food</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
+                        </li>
+                        <li class="nav-item last-item">
+                            <a href="#/quiz1/hometown" class="nav-link">Hometown</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
