--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -58,7 +58,7 @@
                             <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
                         </li>
                         <li class="nav-item last-item">
-                            <a href="#/quiz1/hometown" class="nav-link">Hometown</a>
+                            <a href="#hometown" class="nav-link">Hometown</a>
                         </li>
                     </ul>
                 </div>
@@ -245,7 +245,7 @@
         </div>
     </section>
     
-    <section class="section" id="/quiz1/hometown">
+    <section class="section" id="hometown">
         <div class="container">
             <h2 class="mb-5 pb-4"><span class="text-primary">About</span> My Hometown (Jakarta)</h2>
             <div class="row">
