--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -40,7 +40,7 @@
                             <a href="#/quiz1" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#/quiz1/profile" class="nav-link">Profile</a>
+                            <a href="#quiz1/profile" class="nav-link">Profile</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav brand">
@@ -52,13 +52,13 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                            <a href="#/quiz1/food" class="nav-link">Food</a>
+                            <a href="#quiz1/food" class="nav-link">Food</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#/quiz1/tourist" class="nav-link">Tourist</a>
+                            <a href="#quiz1/tourist" class="nav-link">Tourist</a>
                         </li>
                         <li class="nav-item last-item">
-                            <a href="#hometown" class="nav-link">Hometown</a>
+                            <a href="#quiz1/hometown" class="nav-link">Hometown</a>
                         </li>
                     </ul>
                 </div>
@@ -245,7 +245,7 @@
         </div>
     </section>
     
-    <section class="section" id="hometown">
+    <section class="section" id="quiz1/hometown">
         <div class="container">
             <h2 class="mb-5 pb-4"><span class="text-primary">About</span> My Hometown (Jakarta)</h2>
             <div class="row">
