--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a href="#quiz1-profile" class="nav-link">Profile</a>
                         </li>
+			<li class="nav-item">
+                            <a href="#quiz1-skills" class="nav-link">Skils</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav brand">
                         <img src="assets/imgs/logo_pic.jpeg" alt="" class="brand-img">
@@ -65,7 +68,7 @@
             </div>
     </nav>
     <div class="container-fluid">
-        <div id="about" class="row about-section">
+        <div id=quiz1-profile" class="row about-section">
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
@@ -120,7 +123,7 @@
     </div>
 
     <!--Skills Section -->
-    <section class="section" id="quiz1-profile">
+    <section class="section" id="quiz1-skills">
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">My</span> Skills</h2>
             <div class="row">
