--- a/Reino Yuris Homepage/index.html
+++ b/Reino Yuris Homepage/index.html
@@ -43,7 +43,7 @@
                             <a href="#quiz1-profile" class="nav-link">Profile</a>
                         </li>
 			<li class="nav-item">
-                            <a href="#quiz1-skills" class="nav-link">Skils</a>
+                            <a href="#quiz1-skills" class="nav-link">Skills</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav brand">
